<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="examproject.group22.roominator.OverviewActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:text="@string/overview_btnUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overview_btnUserProfile"
            android:layout_weight="1" />

        <Button
            android:text="@string/overview_btnShoppinglist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overview_btnShoppinglist"
            android:layout_weight="1" />

        <Button
            android:text="@string/overview_btnUserList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/overview_btnUserList"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/content_fragment">

    </FrameLayout>

</RelativeLayout>
