<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="examproject.group22.roominator.SignUpActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/signUp_password"
        android:layout_below="@+id/signup_name_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/singUp_password_txt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        app:srcCompat="@drawable/img_placeholder"
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickTakePicture"/>

    <Button
        android:text="@string/signUp_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/singUp_button"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/singUp_password_txt"
        android:layout_centerHorizontal="true"
        android:onClick="onClickCreate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/prompt_email"
        android:ems="10"
        android:id="@+id/signup_name_txt"
        android:layout_below="@+id/avatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

</RelativeLayout>
